src/generated/aslPaths.js
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { jsonpath: peg$parsejsonpath };
  var peg$startRuleFunction = peg$parsejsonpath;

  var peg$c0 = "States.Format";
  var peg$c1 = "States.StringToJson";
  var peg$c2 = "States.JsonToString";
  var peg$c3 = "States.Array";
  var peg$c4 = "@";
  var peg$c5 = "..";
  var peg$c6 = "$$";
  var peg$c7 = "$";
  var peg$c8 = ".";
  var peg$c9 = "*";
  var peg$c10 = "==";
  var peg$c11 = ">=";
  var peg$c12 = ">";
  var peg$c13 = "<=";
  var peg$c14 = "<";
  var peg$c15 = "[";
  var peg$c16 = "]";
  var peg$c17 = ",";
  var peg$c18 = "(";
  var peg$c19 = ")";
  var peg$c20 = "?";
  var peg$c21 = ":";
  var peg$c22 = "true";
  var peg$c23 = "false";
  var peg$c24 = "null";
  var peg$c25 = "\\";

  var peg$r0 = /^[0-9]/;
  var peg$r1 = /^[^),'"\\.[\]]/;
  var peg$r2 = /^[']/;
  var peg$r3 = /^[^'\\]/;
  var peg$r4 = /^["]/;
  var peg$r5 = /^[^"\\]/;
  var peg$r6 = /^[^\\n]/;
  var peg$r7 = /^[ \t\n]/;

  var peg$e0 = peg$literalExpectation("States.Format", false);
  var peg$e1 = peg$literalExpectation("States.StringToJson", false);
  var peg$e2 = peg$literalExpectation("States.JsonToString", false);
  var peg$e3 = peg$literalExpectation("States.Array", false);
  var peg$e4 = peg$literalExpectation("@", false);
  var peg$e5 = peg$literalExpectation("..", false);
  var peg$e6 = peg$literalExpectation("$$", false);
  var peg$e7 = peg$literalExpectation("$", false);
  var peg$e8 = peg$literalExpectation(".", false);
  var peg$e9 = peg$literalExpectation("*", false);
  var peg$e10 = peg$literalExpectation("==", false);
  var peg$e11 = peg$literalExpectation(">=", false);
  var peg$e12 = peg$literalExpectation(">", false);
  var peg$e13 = peg$literalExpectation("<=", false);
  var peg$e14 = peg$literalExpectation("<", false);
  var peg$e15 = peg$literalExpectation("[", false);
  var peg$e16 = peg$literalExpectation("]", false);
  var peg$e17 = peg$literalExpectation(",", false);
  var peg$e18 = peg$literalExpectation("(", false);
  var peg$e19 = peg$literalExpectation(")", false);
  var peg$e20 = peg$literalExpectation("?", false);
  var peg$e21 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e22 = peg$literalExpectation(":", false);
  var peg$e23 = peg$literalExpectation("true", false);
  var peg$e24 = peg$literalExpectation("false", false);
  var peg$e25 = peg$literalExpectation("null", false);
  var peg$e26 = peg$classExpectation([")", ",", "'", "\"", "\\", ".", "[", "]"], true, false);
  var peg$e27 = peg$classExpectation(["'"], false, false);
  var peg$e28 = peg$classExpectation(["'", "\\"], true, false);
  var peg$e29 = peg$classExpectation(["\""], false, false);
  var peg$e30 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$e31 = peg$literalExpectation("\\", false);
  var peg$e32 = peg$classExpectation(["\\", "n"], true, false);
  var peg$e33 = peg$otherExpectation("whitespace");
  var peg$e34 = peg$classExpectation([" ", "\t", "\n"], false, false);

  var peg$f0 = function(sub) {return {node: "$", sub, isRoot:true}};
  var peg$f1 = function(sub) {return {node: "$$", sub, isRoot:true}};
  var peg$f2 = function(sub) {return {node: "$", sub}};
  var peg$f3 = function(sub) {return {node: "$$", sub}};
  var peg$f4 = function(sub) {return {node: "@", sub}};
  var peg$f5 = function(id, sub) {return {axis: "..", id, sub}};
  var peg$f6 = function(brackets, sub) {return {axis: "..", brackets, sub}};
  var peg$f7 = function(id, sub) {return {axis: ".", id, sub}};
  var peg$f8 = function(brackets, sub) {return {axis: ".", brackets, sub}};
  var peg$f9 = function(head) { return {head}};
  var peg$f10 = function(head, tail) {
   		return {
        head,
        tail: tail.map((t) => t[1])
        }
     };
  var peg$f11 = function(func, args) {return {func, args}};
  var peg$f12 = function(func, args) {return {func, args}};
  var peg$f13 = function(func, args) {return {func, args}};
  var peg$f14 = function(func, args) {return {func, args}};
  var peg$f15 = function(head) {return {
   	head,
    tail: [] }
   };
  var peg$f16 = function() { return []};
  var peg$f17 = function(head, tail) {return {
   	head,
    tail: tail.map((t) => t[2]) }
   };
  var peg$f18 = function(start, end) {return {start, end, slice:true}};
  var peg$f19 = function(end) {return {start:null, end, slice: true}};
  var peg$f20 = function(exp) {return {exp}};
  var peg$f21 = function(exp) {return {exp}};
  var peg$f22 = function(path, op, val) {return {path, op, val}};
  var peg$f23 = function(v) {return v.join('')};
  var peg$f24 = function(v) {return v.join("")};
  var peg$f25 = function(v) {return v.join("")};
  var peg$f26 = function(c) { return c; };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsejsonpath() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseCONTEXT_ROOT_VALUE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesubscript();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseROOT_VALUE();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesubscript();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        s3 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f1(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseintrinsic_function();
      }
    }

    return s0;
  }

  function peg$parsejsonpath_() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseCONTEXT_ROOT_VALUE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesubscript();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f2(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseROOT_VALUE();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesubscript();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f3(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseCURRENT_VALUE();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsesubscript();
          if (s2 === peg$FAILED) {
            s2 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f4(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parseintrinsic_function();
        }
      }
    }

    return s0;
  }

  function peg$parsejsonpath__() {
    var s0;

    s0 = peg$parsejsonpath_();
    if (s0 === peg$FAILED) {
      s0 = peg$parsevalue();
    }

    return s0;
  }

  function peg$parsesubscript() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseRECURSIVE_DESCENT();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesubscriptableBareword();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesubscript();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f5(s2, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseRECURSIVE_DESCENT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesubscriptables();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsesubscript();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f6(s2, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseSUBSCRIPT();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsesubscriptableBareword();
          if (s2 !== peg$FAILED) {
            s3 = peg$parsesubscript();
            if (s3 === peg$FAILED) {
              s3 = null;
            }
            peg$savedPos = s0;
            s0 = peg$f7(s2, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsesubscriptables();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsesubscript();
            if (s2 === peg$FAILED) {
              s2 = null;
            }
            peg$savedPos = s0;
            s0 = peg$f8(s1, s2);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parsesubscriptables() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseBRACKET_LEFT();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesubscriptable();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseBRACKET_RIGHT();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f9(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseBRACKET_LEFT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseNUMBER();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseCOMMA();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseNUMBER();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseCOMMA();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseNUMBER();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          s4 = peg$parseBRACKET_RIGHT();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f10(s2, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsesubscriptableBareword() {
    var s0;

    s0 = peg$parseID();

    return s0;
  }

  function peg$parseintrinsic_function() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 13) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 13;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsefunction_args();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f11(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 19) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 19;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsesingle_arg();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f12(s1, s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 19) === peg$c2) {
          s1 = peg$c2;
          peg$currPos += 19;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsesingle_arg();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f13(s1, s2);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 12) === peg$c3) {
            s1 = peg$c3;
            peg$currPos += 12;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e3); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parsefunction_args();
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f14(s1, s2);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parsesingle_arg() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsePAREN_LEFT();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parsejsonpath__();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parsePAREN_RIGHT();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f15(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefunction_args() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parsePAREN_LEFT();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parsePAREN_RIGHT();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f16();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsePAREN_LEFT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parsejsonpath__();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          s5 = [];
          s6 = peg$currPos;
          s7 = peg$parseCOMMA();
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parsejsonpath__();
            if (s9 !== peg$FAILED) {
              s10 = peg$parse_();
              s7 = [s7, s8, s9, s10];
              s6 = s7;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$currPos;
            s7 = peg$parseCOMMA();
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_();
              s9 = peg$parsejsonpath__();
              if (s9 !== peg$FAILED) {
                s10 = peg$parse_();
                s7 = [s7, s8, s9, s10];
                s6 = s7;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          }
          s6 = peg$parse_();
          s7 = peg$parsePAREN_RIGHT();
          if (s7 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f17(s3, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsesubscriptable() {
    var s0, s1, s2, s3, s4;
